Bug 497576 - Preview pixelation and scale problems in Dolphin after upgrade from Dolphin 24.08.3 -> 24.12.0
Summary: Preview pixelation and scale problems in Dolphin after upgrade from Dolphin 2...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 24.12.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-12-16 21:18 UTC by OIRNOIR
Modified: 2025-01-09 12:30 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12.2
Sentry Crash Report:


Attachments
Screenshot of Dolphin, information panel shows broken preview of folder containing image (434.86 KB, image/png)
2024-12-16 21:37 UTC, OIRNOIR
Details
Screenshot of Dolphin, information panel shows broken preview of image itself (466.68 KB, image/png)
2024-12-16 21:37 UTC, OIRNOIR
Details
Dolphin image preview with 100% scaling (672.29 KB, image/png)
2024-12-29 16:03 UTC, nicols
Details
Dolphin image preview with 125% scaling (505.05 KB, image/png)
2024-12-29 16:04 UTC, nicols
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OIRNOIR 2024-12-16 21:18:21 UTC
SUMMARY
Upon updating to dolphin 24.12.0, the information panel (F11) in Dolphin now displays previews wrongly for images. Instead of fitting the image, it fills it, cutting off the longer side. In addition, it seems unusually pixelated, even for high resolution images. I was able to reproduce this on a clean install in a VM.

STEPS TO REPRODUCE
- Install Fedora 41 KDE spin
- Obtain any non-square (so, either horizontal or vertical) image in either png or jpg format
- In Dolphin, navigate to the directory containing your image
- Enable the information portal via hamburger menu → Show Panels → Information
- Hover over the image

OBSERVED RESULT
Part of the image is now cut off, and it may look slightly pixelated.

EXPECTED RESULT
The entire image is shown within the borders of the preview, and it doesn’t look pixelated

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Linux 6.12.4
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.1

ADDITIONAL INFORMATION
Comment 1 OIRNOIR 2024-12-16 21:35:56 UTC
In addition to the fresh Fedora KDE install, I was also able to reproduce it on a fresh EndeavourOS install.
Comment 2 OIRNOIR 2024-12-16 21:37:12 UTC
Created attachment 176697 [details]
Screenshot of Dolphin, information panel shows broken preview of folder containing image
Comment 3 OIRNOIR 2024-12-16 21:37:45 UTC
Created attachment 176698 [details]
Screenshot of Dolphin, information panel shows broken preview of image itself
Comment 4 OIRNOIR 2024-12-16 21:52:52 UTC
Update: This bug seems to be most apparent on display scalings above 100%.
Comment 5 OIRNOIR 2024-12-17 21:11:15 UTC
This is still a problem on KDE Frameworks 6.9.0
Comment 6 nicols 2024-12-23 10:53:10 UTC
Same problem is present on KDE Neon:
- Plasma 6.2.4
- KDE Frameworks: 6.9.0
- Qt Version 6.8.1
- Kernel 6.8.0-51-generic (64 bit)
- Dolphin 24.12.0.1

Scaling is set to 125%, problem with Dolphin preview is both on Wayland and X11
Comment 7 nicols 2024-12-29 16:03:57 UTC
Created attachment 176952 [details]
Dolphin image preview with 100% scaling
Comment 8 nicols 2024-12-29 16:04:24 UTC
Created attachment 176953 [details]
Dolphin image preview with 125% scaling
Comment 9 Bug Janitor Service 2025-01-06 17:27:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/884
Comment 10 Erasmo Caponio 2025-01-07 21:29:31 UTC
(In reply to OIRNOIR from comment #4)
> Update: This bug seems to be most apparent on display scalings above 100%.

I can confirm this bug on Manjaro. I also confirm that when the diplayed is not scaled the bug is not present
Comment 11 Méven 2025-01-09 12:22:02 UTC
Git commit 863c1be871d7dbd16800cf7400284783d52352d5 by Méven Car.
Committed on 09/01/2025 at 09:44.
Pushed by meven into branch 'master'.

information panel: scale according dpr

Also use dpr for icons.

Amends cebcf8db

M  +2    -2    src/kitemviews/kfileitemmodelrolesupdater.cpp
M  +1    -1    src/kitemviews/kstandarditemlistwidget.cpp
M  +7    -5    src/panels/information/informationpanelcontent.cpp

https://invent.kde.org/system/dolphin/-/commit/863c1be871d7dbd16800cf7400284783d52352d5
Comment 12 Méven 2025-01-09 12:29:45 UTC
Git commit c7e2cb3a5a4a72b1b560153cea8454280f8155a8 by Méven Car.
Committed on 09/01/2025 at 12:22.
Pushed by meven into branch 'release/24.12'.

information panel: scale according dpr

Also use dpr for icons.

Amends cebcf8db

(cherry picked from commit 863c1be871d7dbd16800cf7400284783d52352d5)

M  +2    -2    src/kitemviews/kfileitemmodelrolesupdater.cpp
M  +1    -1    src/kitemviews/kstandarditemlistwidget.cpp
M  +7    -5    src/panels/information/informationpanelcontent.cpp

https://invent.kde.org/system/dolphin/-/commit/c7e2cb3a5a4a72b1b560153cea8454280f8155a8