information panel: scale according dpr

Also use dpr for icons.

Amends cebcf8db
BUG: 497576